// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arguments 1`] = `
Object {
  "contents": Array [
    "scalar CustomScalar",
  ],
}
`;

exports[`field type: CustomScalar 1`] = `
Object {
  "contents": Array [
    "scalar CustomScalar",
  ],
}
`;

exports[`field type: Enum 1`] = `
Object {
  "contents": Array [
    "enum Role {
  roleA
  roleB
  roleC
}",
  ],
}
`;

exports[`field type: ObjectType 1`] = `
Object {
  "contents": Array [
    "type Player implements Node {
  id: ID!
  name: String!
  image(size: Int!): String!
}",
  ],
}
`;

exports[`implements 1`] = `
Object {
  "contents": Array [
    "interface Node {
  id: ID!
}",
  ],
}
`;

exports[`union type 1`] = `
Object {
  "contents": Array [
    "type Player implements Node {
  id: ID!
  name: String!
  image(size: Int!): String!
}",
  ],
}
`;
